# serena

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: publish.yml
.serena/: project.yml
scripts/: bump_version.py
src/serena/: __init__.py  agent.py  cli.py  code_editor.py  dashboard.py  gui_log_viewer.py  hooks.py  mcp.py  project.py  (+1 more)
test/: conftest.py  conftest_dev_host.py  conftest_dev_host_test.py
test/e2e/fixtures/calcpy_e2e/: pyproject.toml
test/e2e/fixtures/calcpy_e2e/calcpy/: __init__.py  calcpy.py
test/e2e/fixtures/calcpy_e2e/tests/: test_byte_identity.py
test/fixtures/calcpy_circular/: pyproject.toml
test/fixtures/calcpy_circular/calcpy_circular/: __init__.py  a.py  b.py
test/fixtures/calcpy_circular/tests/: test_circular.py
test/fixtures/calcpy_dataclasses/: conftest.py  pyproject.toml
test/fixtures/calcpy_dataclasses/calcpy_dataclasses/: __init__.py  models.py
test/fixtures/calcpy_dataclasses/calcpy_dataclasses/sub/: __init__.py  extracted.py
test/fixtures/calcpy_dataclasses/tests/: test_dc.py
test/fixtures/calcpy_notebooks/: conftest.py  pyproject.toml
test/fixtures/calcpy_notebooks/notebooks/: explore.ipynb
test/fixtures/calcpy_notebooks/src/: calcpy_min.py
test/fixtures/calcpy_notebooks/tests/: test_nb.py
test/fixtures/calcrs/: Cargo.toml  rust-toolchain.toml
test/fixtures/calcrs/calcrs/: Cargo.toml
test/fixtures/calcrs/calcrs-core/: Cargo.toml
test/fixtures/calcrs/calcrs-core/src/: ast.rs  errors.rs  eval.rs  lib.rs
test/fixtures/calcrs/calcrs/src/: lib.rs
test/fixtures/calcrs/ra_convert_returntype/: Cargo.toml
test/fixtures/calcrs/ra_convert_returntype/src/: lib.rs
test/fixtures/calcrs/ra_convert_typeshape/: Cargo.toml
test/fixtures/calcrs/ra_convert_typeshape/src/: lib.rs
test/fixtures/calcrs/ra_extractors/: Cargo.toml
test/fixtures/calcrs/ra_extractors/src/: lib.rs
test/fixtures/calcrs/ra_generators_methods/: Cargo.toml
test/fixtures/calcrs/ra_generators_methods/src/: lib.rs
test/fixtures/calcrs/ra_generators_traits/: Cargo.toml
test/fixtures/calcrs/ra_generators_traits/src/: lib.rs
test/fixtures/calcrs/ra_glob_imports/: Cargo.toml
test/fixtures/calcrs/ra_glob_imports/src/: lib.rs
test/fixtures/calcrs/ra_imports/: Cargo.toml
test/fixtures/calcrs/ra_imports/src/: lib.rs
test/fixtures/calcrs/ra_inliners/: Cargo.toml
test/fixtures/calcrs/ra_inliners/src/: lib.rs
test/fixtures/calcrs/ra_lifetimes/: Cargo.toml
test/fixtures/calcrs/ra_lifetimes/src/: lib.rs
test/fixtures/calcrs/ra_macros/: Cargo.toml
test/fixtures/calcrs/ra_macros/src/: lib.rs
test/fixtures/calcrs/ra_module_layouts/: Cargo.toml
test/fixtures/calcrs/ra_module_layouts/src/: baz.rs  lib.rs
test/fixtures/calcrs/ra_module_layouts/src/foo/: bar.rs  mod.rs
test/fixtures/calcrs/ra_ordering/: Cargo.toml
test/fixtures/calcrs/ra_ordering/src/: lib.rs
test/fixtures/calcrs/ra_pattern_destructuring/: Cargo.toml
test/fixtures/calcrs/ra_pattern_destructuring/src/: lib.rs
test/fixtures/calcrs/ra_proc_macros/: Cargo.toml
test/fixtures/calcrs/ra_proc_macros/src/: lib.rs
test/fixtures/calcrs/ra_quickfixes/: Cargo.toml
test/fixtures/calcrs/ra_quickfixes/src/: lib.rs
test/fixtures/calcrs/ra_ssr/: Cargo.toml
test/fixtures/calcrs/ra_ssr/src/: lib.rs
test/fixtures/calcrs/ra_term_search/: Cargo.toml
test/fixtures/calcrs/ra_term_search/src/: lib.rs
test/fixtures/calcrs/ra_visibility/: Cargo.toml
test/fixtures/calcrs/ra_visibility/src/: lib.rs
test/fixtures/calcrs/ra_workspace_edit_shapes/: Cargo.toml
test/fixtures/calcrs/ra_workspace_edit_shapes/src/: lib.rs
test/fixtures/calcrs/tests/: test_workspace_members.sh
(+590 files in other folders)
