[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calcpy-notebooks-fixture"
version = "0.0.0"
requires-python = ">=3.11"
description = "Stage 1H sub-fixture for organize-imports flow with .ipynb byte-stability."
dependencies = ["nbformat>=5.9"]

[tool.hatch.build.targets.wheel]
packages = ["src/calcpy_min"]
