[workspace]
resolver = "2"
members = [
    "calcrs",
    "calcrs-core",
    "ra_extractors",
    "ra_inliners",
    "ra_visibility",
    "ra_imports",
    "ra_glob_imports",
    "ra_ordering",
    "ra_generators_traits",
    "ra_generators_methods",
    "ra_convert_typeshape",
    "ra_convert_returntype",
    "ra_pattern_destructuring",
    "ra_lifetimes",
    "ra_proc_macros",
    "ra_ssr",
    "ra_macros",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.74"
