[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "calcpy_e2e"
version = "0.1.0"
description = "Stage 2B E2E baseline — kitchen-sink calcpy used by E1-py / E9-py / E10-py"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["calcpy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
